Additional pages for privacy and cookies

--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,9 @@ padding: 70px 0;
 .footer h1{
 color:#fff;
 }
+.footer h5{
+color:#fff;
+}
 .footer.section {
 background: #020202;
 color: #949494;
